dev.log
  ▲ Next.js 14.2.35
  - Local:        http://localhost:3005

 ✓ Starting...
 ✓ Ready in 1070ms
 ○ Compiling /our-founder ...
 ✓ Compiled /our-founder in 880ms (1393 modules)
 GET /our-founder 200 in 999ms
 ✓ Compiled in 145ms (690 modules)
 ✓ Compiled in 173ms (690 modules)
 ✓ Compiled in 249ms (690 modules)
 ✓ Compiled in 93ms (690 modules)
 ✓ Compiled in 179ms (690 modules)
 ✓ Compiled in 59ms (690 modules)
 ✓ Compiled in 161ms (690 modules)
 ✓ Compiled in 50ms (690 modules)
 ✓ Compiled in 112ms (690 modules)
 ✓ Compiled in 428ms (690 modules)
 ✓ Compiled in 44ms (690 modules)
 ✓ Compiled in 83ms (690 modules)
 ✓ Compiled in 50ms (690 modules)
 ✓ Compiled in 19.1s (701 modules)
 ✓ Compiled in 42ms (692 modules)
 ✓ Compiled in 200ms (692 modules)
 ✓ Compiled in 117ms (692 modules)
 ✓ Compiled in 330ms (692 modules)
 ✓ Compiled in 43ms (692 modules)
 ✓ Compiled in 125ms (692 modules)
 ✓ Compiled in 303ms (692 modules)
 ✓ Compiled in 127ms (692 modules)
 ✓ Compiled in 105ms (692 modules)
 ✓ Compiled in 127ms (693 modules)
 ✓ Compiled in 36ms (693 modules)
 ✓ Compiled in 104ms (693 modules)
 ✓ Compiled in 217ms (693 modules)
 ✓ Compiled in 195ms (693 modules)
 ✓ Compiled in 54ms (693 modules)
 ✓ Compiled in 88ms (679 modules)
 ⚠ Found a change in next.config.mjs. Restarting the server to apply the changes...
  ▲ Next.js 14.2.35
  - Local:        http://localhost:3005

 ✓ Starting...
 ✓ Ready in 1160ms
 ⚠ Found a change in next.config.mjs. Restarting the server to apply the changes...
  ▲ Next.js 14.2.35
  - Local:        http://localhost:3005

 ✓ Starting...
 ✓ Ready in 13.4s
 ⚠ Found a change in next.config.mjs. Restarting the server to apply the changes...
file:///Users/akash/Documents/vs/viruthi/next.config.mjs:5
const nextConfig = {};
      ^

SyntaxError: Identifier 'nextConfig' has already been declared
    at compileSourceTextModule (node:internal/modules/esm/utils:318:16)
    at ModuleLoader.moduleStrategy (node:internal/modules/esm/translators:99:18)
    at #translate (node:internal/modules/esm/loader:473:20)
    at afterLoad (node:internal/modules/esm/loader:529:29)
    at ModuleLoader.loadAndTranslate (node:internal/modules/esm/loader:534:12)
    at #getOrCreateModuleJobAfterResolve (node:internal/modules/esm/loader:577:36)
    at afterResolve (node:internal/modules/esm/loader:625:52)
    at ModuleLoader.getOrCreateModuleJob (node:internal/modules/esm/loader:631:12)
    at onImport.tracePromise.__proto__ (node:internal/modules/esm/loader:650:32)
    at TracingChannel.tracePromise (node:diagnostics_channel:350:14)

Node.js v24.14.1
[?25h
